--- a/webclient/pom.xml
+++ b/webclient/pom.xml
@@ -22,6 +22,10 @@
 			<artifactId>webclient.feature.nomination</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>benciao.webclient</groupId>
+			<artifactId>webclient.feature.process</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
