--- a/webclient/src/main/resources/application.properties
+++ b/webclient/src/main/resources/application.properties
@@ -14,3 +14,4 @@ hibernate.hbm2ddl.auto=
 sec.init.user.pw=Leipzig1
 sec.setup.user.pw=setup
 sec.is.login.as.other.user.allowed=true
+sec.enable.audit=true
